syntax = "proto3";

package pb;

import "trader.proto";

option go_package = "peerbill-trader-api/pb";

message GetTradersRequest {
    string        fiat = 1;
    string        crypto = 2;
}

message GetTradersResponse {
    repeated Trader trader = 1;
}